--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.ns.yc.lifehelper"
         minSdkVersion 17
         targetSdkVersion 25
-        versionCode 7
-        versionName "1.7"
+        versionCode 8
+        versionName "1.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         /*ndk {
@@ -50,6 +50,7 @@ bugly {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //官方库
+    //官方库
     //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:support-v4:25.4.0'
@@ -62,32 +63,22 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
 
 
-    //测试框架
-    testCompile 'junit:junit:4.12'
-    androidTestCompile 'junit:junit:4.12'
-    //testCompile "org.robolectric:robolectric:3.6.1"
-    //testCompile "org.mockito:mockito-all:1.10.19"
-
-
     //网络请求retrofit2+Rx
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
     compile 'io.reactivex:rxjava:1.1.0'
 
-
     //事件总线
     compile 'org.greenrobot:eventbus:3.0.0'
-
 
     //注解
     compile 'com.jakewharton:butterknife:7.0.1'                 //黄牛刀
     compile 'com.google.dagger:dagger:2.13'                     //注解
     apt 'com.google.dagger:dagger-compiler:2.13'
-
 
     //图片加载框架
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -132,22 +123,14 @@ dependencies {
     compile files('libs/tbs_sdk_thirdapp_v3.2.0.1104_43200_sharewithdownload_withfilereader_withoutGame_obfs_20170609_115346.jar')
 
 
-    //环信
-    //Optional compile for GCM (Google Cloud Messaging).
-    //compile 'com.google.android.gms:play-services-gcm:9.4.0'
-    //compile 'com.hyphenate:hyphenate-sdk:3.3.0'
-    compile 'com.hyphenate:hyphenate-sdk-lite:3.3.0'
-
-
-
     //关于开源库，都已经放到的github上，https://github.com/yangchong211
     compile 'cn.yc:YCStateLib:1.1'                                  //状态管理
     compile 'cn.yc:YCPhotoLib:1.0'                                  //图片选择器
-    compile 'cn.yc:YCDialogLib:3.2'                                 //弹窗
+    compile 'cn.yc:YCDialogLib:3.5'                                 //弹窗
     compile 'cn.yc:YCCountDownViewLib:1.0'                          //倒计时器
-    compile 'cn.yc:YCUtilsLib:1.5'                                  //公共类
+    compile 'cn.yc:YCUtilsLib:1.6'                                  //公共类
     compile 'cn.yc:YCMultiInputViewLib:1.0'                         //倒计数
-    compile 'cn.yc:YCProgressLib:1.0'                               //进度条
+    compile 'cn.yc:YCProgressLib:1.2'                               //进度条
     compile 'cn.yc:YCCardViewLib:1.2'                               //滑动卡片
     compile 'cn.yc:YCCustomTextLib:2.1'                             //自定义超文本
     compile 'cn.yc:YCRecycleViewLib:1.1'                            //RecycleView封装类，多选单选
@@ -155,6 +138,6 @@ dependencies {
     compile 'cn.yc:YCGalleryLib:1.1'                                //自定义画廊
     compile 'cn.yc:YCBaseAdapterLib:1.2'                            //adapter封装
     compile 'cn.yc:YCBannerLib:1.2'                                 //轮播图
-    compile 'org.yczbj:YCRefreshViewLib:1.4'                        //RecyclerView封装，刷新加载
+    compile 'org.yczbj:YCRefreshViewLib:2.3'                        //RecyclerView封装，刷新加载
 
 }
