--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,7 +122,6 @@
         <activity android:name=".ui.other.myKnowledge.MyKnowledgeActivity"/>
         <activity android:name=".ui.other.myKnowledge.activity.KnowledgeSearchActivity"/>
         <activity android:name=".ui.other.myKnowledge.activity.KnowledgeImageActivity"/>
-        <activity android:name=".ui.other.imTalk.ui.ImTalkActivity"/>
         <activity android:name=".ui.other.myNews.wyNews.WyNewsActivity"/>
         <activity android:name=".ui.other.myNews.wxNews.WxNewsActivity"/>
         <activity android:name=".ui.other.myNews.wyNews.view.WxNewsDropActivity"/>
@@ -188,7 +187,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="rtsp" />
             </intent-filter>
-            <intent-filter>
+            <intent-filter tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="video/*" />
@@ -259,28 +258,6 @@
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".ui.other.mobilePlayer.activity.MobileAudioPlayActivity"/>
-
-
-        <!-- 设置环信应用的AppKey -->
-        <meta-data android:name="EASEMOB_APPKEY"  android:value="Your AppKey" />
-        <!-- 声明SDK所需的service SDK核心功能-->
-        <service android:name="com.hyphenate.chat.EMChatService" android:exported="true"/>
-        <service android:name="com.hyphenate.chat.EMJobService"
-                 android:permission="android.permission.BIND_JOB_SERVICE"
-                 android:exported="true"
-            />
-        <!-- 声明SDK所需的receiver -->
-        <receiver android:name="com.hyphenate.chat.EMMonitorReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
-                <data android:scheme="package"/>
-            </intent-filter>
-            <!-- 可选filter -->
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <action android:name="android.intent.action.USER_PRESENT" />
-            </intent-filter>
-        </receiver>
 
 
     </application>
