组件化方案实践与总结

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,11 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
