--- a/love/build.gradle
+++ b/love/build.gradle
@@ -52,6 +52,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
