--- a/news/build.gradle
+++ b/news/build.gradle
@@ -50,6 +50,11 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
