--- a/note/build.gradle
+++ b/note/build.gradle
@@ -51,6 +51,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
+    lintOptions {
+        abortOnError false
+    }
+
 }
 
 dependencies {
