--- a/yc.gradle
+++ b/yc.gradle
@@ -3,7 +3,7 @@ ext {
 
     isApplication = false  //false:作为Lib组件存在， true:作为application存在，这个不建议改
     isLoveApplication = false  //爱意表达模块开关，false:作为Lib组件存在， true:作为application存在
-    isVideoApplication = true  //视频模块开关，false:作为Lib组件存在， true:作为application存在
+    isVideoApplication = false  //视频模块开关，false:作为Lib组件存在， true:作为application存在
     isZhiHuApplication = false  //知乎模块开关，false:作为Lib组件存在， true:作为application存在
     isBookApplication = false  //book模块开关，false:作为Lib组件存在， true:作为application存在
     isDouBanApplication = false  //豆瓣模块开关，false:作为Lib组件存在， true:作为application存在
