--- a/android/src/main/module/AndroidManifest.xml
+++ b/android/src/main/module/AndroidManifest.xml
@@ -14,6 +14,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.AndroidActivity"/>
+        <activity android:name=".view.activity.AndroidDetailActivity"/>
+        <activity android:name=".view.activity.AndroidAboutActivity"/>
+        <activity android:name=".view.activity.AndroidLoginActivity"/>
+        <activity android:name=".view.activity.AndroidSearchActivity"/>
+        <activity android:name=".view.activity.KnowledgeTreeDetailActivity"/>
+        <activity android:name=".view.activity.NavWebsiteActivity"/>
     </application>
 
 
