组件化方案实践与总结

--- a/android/src/main/module/AndroidManifest.xml
+++ b/android/src/main/module/AndroidManifest.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ycbjie.android">
 
     <application
+        android:name=".base.AndroidApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+        android:label="@string/app_android_name"
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true"
+        tools:replace="android:label"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".view.activity.AndroidActivity">
             <intent-filter>
@@ -14,7 +19,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.AndroidActivity"/>
         <activity android:name=".view.activity.AndroidDetailActivity"/>
         <activity android:name=".view.activity.AndroidAboutActivity"/>
         <activity android:name=".view.activity.AndroidLoginActivity"/>
