--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,7 +16,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-
+        multiDexEnabled true
         if (rootProject.ext.isAndroidApplication){
             //组件模式下设置applicationId
             applicationId "com.ycbjie.android"
