组件化方案实践与总结

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity android:name=".view.activity.AndroidSearchActivity"/>
         <activity android:name=".view.activity.KnowledgeTreeDetailActivity"/>
         <activity android:name=".view.activity.NavWebsiteActivity"/>
+        <activity android:name=".view.activity.AndroidCollectActivity"/>
     </application>
 
 
