--- a/android/src/main/module/AndroidManifest.xml
+++ b/android/src/main/module/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".view.activity.AndroidSearchActivity"/>
         <activity android:name=".view.activity.KnowledgeTreeDetailActivity"/>
         <activity android:name=".view.activity.NavWebsiteActivity"/>
+        <activity android:name=".view.activity.AndroidCollectActivity"/>
+
     </application>
 
 
