--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".view.activity.KnowledgeTreeDetailActivity"/>
         <activity android:name=".view.activity.NavWebsiteActivity"/>
         <activity android:name=".view.activity.AndroidCollectActivity"/>
+        <activity android:name=".view.activity.AndroidRegisterActivity"/>
     </application>
 
 
