--- a/yc.gradle
+++ b/yc.gradle
@@ -8,7 +8,7 @@ ext {
     isBookApplication = false  //book模块开关，false:作为Lib组件存在， true:作为application存在
     isDouBanApplication = false  //豆瓣模块开关，false:作为Lib组件存在， true:作为application存在
     isOtherApplication = false  //其他模块开关，false:作为Lib组件存在， true:作为application存在
-    isAndroidApplication = false  //玩Android模块开关，false:作为Lib组件存在， true:作为application存在
+    isAndroidApplication = true  //玩Android模块开关，false:作为Lib组件存在， true:作为application存在
 
     //下面组件先不要切换，后期待完善
     isNoteApplication = false  //记事本模块开关，false:作为Lib组件存在， true:作为application存在
@@ -53,8 +53,8 @@ ext {
                 "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
                 "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
                 "retrofit-adapter-rxjava2"  : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
-                "okhttp"                   : "com.squareup.okhttp3:okhttp:3.8.1",
-                "logging-interceptor"      : "com.squareup.okhttp3:logging-interceptor:3.8.1",
+                "okhttp"                   : "com.squareup.okhttp3:okhttp:${version["okhttp"]}",
+                "logging-interceptor"      : "com.squareup.okhttp3:logging-interceptor:${version["okhttp"]}",
                 "rxandroid2"                : "io.reactivex.rxjava2:rxandroid:2.1.0",
                 "rxjava2"                   : "io.reactivex.rxjava2:rxjava:2.1.11",
                 "rxrelay"                  : "com.jakewharton.rxrelay2:rxrelay:2.0.0",
