--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
