在组件化切换时，优化application启动逻辑

--- a/douban/src/main/module/AndroidManifest.xml
+++ b/douban/src/main/module/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
 
     <application
-        android:name=".DouBanApp"
+        android:name=".app.DouBanApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_douban_name"
