--- a/todo/src/main/module/AndroidManifest.xml
+++ b/todo/src/main/module/AndroidManifest.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ycbjie.todo" >
 
-    <application>
-        <activity android:name="com.ycbjie.todo.ui.WorkDoActivity"/>
+    <application
+        android:name=".app.ToDoApp"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_todo_name"
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true"
+        tools:replace="android:label"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <activity android:name=".ui.WorkDoActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name="com.ycbjie.todo.ui.activity.WorkNewActivity"/>
         <activity android:name="com.ycbjie.todo.ui.activity.WorkSettingActivity"/>
         <activity
