--- a/music/src/main/module/AndroidManifest.xml
+++ b/music/src/main/module/AndroidManifest.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ycbjie.music">
 
-    <application>
+    <application
+        android:name=".app.MusicApp"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        android:supportsRtl="true"
+        tools:replace="android:label"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name=".ui.activity.MusicActivity"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.activity.MusicInfoActivity"/>
         <activity android:name=".ui.activity.OnlineMusicActivity"/>
         <activity android:name=".ui.activity.ArtistInfoActivity"/>
