--- a/yc.gradle
+++ b/yc.gradle
@@ -6,8 +6,8 @@ ext {
     isVideoApplication = false  //视频模块开关，false:作为Lib组件存在， true:作为application存在
     isZhiHuApplication = false  //知乎模块开关，false:作为Lib组件存在， true:作为application存在
     isBookApplication = false  //book模块开关，false:作为Lib组件存在， true:作为application存在
-    isDouBanApplication = false  //豆瓣模块开关，false:作为Lib组件存在， true:作为application存在
-    isOtherApplication = false  //其他模块开关，false:作为Lib组件存在， true:作为application存在
+    isDouBanApplication = true  //豆瓣模块开关，false:作为Lib组件存在， true:作为application存在
+    isOtherApplication = true  //其他模块开关，false:作为Lib组件存在， true:作为application存在
     isAndroidApplication = false  //玩Android模块开关，false:作为Lib组件存在， true:作为application存在
     isGankApplication = false  //干货模块开关，false:作为Lib组件存在， true:作为application存在
     isToDoApplication = false  //todo模块开关，false:作为Lib组件存在， true:作为application存在
@@ -48,6 +48,7 @@ ext {
                 "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
                 "constraint-layout"        : "com.android.support.constraint:constraint-layout:${version["constraintVersion"]}",
                 "percent"                  : "com.android.support:percent:${version["androidSupportSdkVersion"]}",
+                "dynamic"                  : "com.android.support:support-dynamic-animation:${version["androidSupportSdkVersion"]}",
                 "multidex"                 : "com.android.support:multidex:1.0.2",
 
                 //network
