--- a/other/src/main/AndroidManifest.xml
+++ b/other/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name="com.ycbjie.other.ui.activity.ProgressSecondActivity"/>
         <activity android:name="com.ycbjie.other.ui.activity.ProgressThirdActivity"/>
         <activity android:name="com.ycbjie.other.ui.activity.MonkeyGameActivity"/>
+        <activity android:name=".ui.activity.ScrollActivity"/>
     </application>
 
 
