--- a/other/src/main/AndroidManifest.xml
+++ b/other/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name="com.ycbjie.other.ui.activity.ProgressThirdActivity"/>
         <activity android:name="com.ycbjie.other.ui.activity.MonkeyGameActivity"/>
         <activity android:name=".ui.activity.ScrollActivity"/>
+        <activity android:name=".ui.activity.MixtureTextViewActivity"/>
     </application>
 
 
