--- a/other/src/main/module/AndroidManifest.xml
+++ b/other/src/main/module/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name="com.ycbjie.other.ui.activity.MonkeyGameActivity"/>
         <activity android:name=".ui.activity.TestFirstActivity"/>
         <activity android:name=".ui.activity.ScrollActivity"/>
-
+        <activity android:name=".ui.activity.MixtureTextViewActivity"/>
     </application>
 
 
