网络请求异常拦截优化，统一管理请求错误异常提示

--- a/gank/build.gradle
+++ b/gank/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        multiDexEnabled true
 
         if (rootProject.ext.isGankApplication){
             //组件模式下设置applicationId
