--- a/yc.gradle
+++ b/yc.gradle
@@ -11,10 +11,10 @@ ext {
     isAndroidApplication = false  //玩Android模块开关，false:作为Lib组件存在， true:作为application存在
     isGankApplication = false  //干货模块开关，false:作为Lib组件存在， true:作为application存在
     isToDoApplication = false  //todo模块开关，false:作为Lib组件存在， true:作为application存在
-
+    isNoteApplication = true  //记事本模块开关，false:作为Lib组件存在， true:作为application存在
 
     //下面组件先不要切换，后期待完善
-    isNoteApplication = false  //记事本模块开关，false:作为Lib组件存在， true:作为application存在
+
     isNewsApplication = false  //新闻模块开关，false:作为Lib组件存在， true:作为application存在
     isMusicApplication = false  //音乐模块开关，false:作为Lib组件存在， true:作为application存在
 
