--- a/video/src/main/module/AndroidManifest.xml
+++ b/video/src/main/module/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.ycbjie.video" >
 
     <application
-        android:name=".VideoApp"
+        android:name=".app.VideoApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_video_name"
